# ML-Introduction-

./: README.md
Regression Playground – So sánh Linear, Ridge, Lasso, Kernel Ridge, SVR/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
Regression Playground – So sánh Linear, Ridge, Lasso, Kernel Ridge, SVR/notebooks/: chapter_7_regression_walkthrough.ipynb
Regression Playground – So sánh Linear, Ridge, Lasso, Kernel Ridge, SVR/src/: __init__.py  data.py  evaluation.py  experiment.py  models.py  visualization.py
Regression Playground – So sánh Linear, Ridge, Lasso, Kernel Ridge, SVR/src/regression_playground_chapter_7.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Regression Playground – So sánh Linear, Ridge, Lasso, Kernel Ridge, SVR/tests/: test_data.py  test_evaluation.py  test_models.py
density-lab-bias-variance/: AGENTS.md  README.md  app.py  pyproject.toml  requirements.txt
density-lab-bias-variance/notebooks/: 01_density_lab.ipynb
density-lab-bias-variance/notebooks/.ipynb_checkpoints/: 01_density_lab-checkpoint.ipynb
density-lab-bias-variance/reports/: density_lab_summary.md
density-lab-bias-variance/src/density_lab/: __init__.py  data_generator.py  density_models.py  experiments.py  plots.py  utils.py
density-lab-bias-variance/src/density_lab_bias_variance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
density-lab-bias-variance/tests/: test_data_generator.py  test_density_models.py
